--- a/app/(routes)/vehiculo/components/companies/CompanyLogo.module.css
+++ b/app/(routes)/vehiculo/components/companies/CompanyLogo.module.css
@@ -1,21 +1,14 @@
 .container {
-  height: 150px;
-  padding: 16px;
-  grid-row: 1;
-  grid-column: 1;
-  margin: 8px 0;
-  display: flex;
-  justify-content: center;
-
-  @media (min-width: 425px) {
-    justify-content: start;
-    grid-column: 1/3;
-    margin: 0;
-    padding: 0;
+  width: 150px;
+  
+  @media (min-width: 426px) {
+    width: 200px;
   }
 }
 
 .container img {
   pointer-events: none;
   touch-action: none;
+  width: 150px;
+  height: auto;
 }
