--- a/app/(routes)/vehiculo/components/vehicleModel/VehicleBrand.module.css
+++ b/app/(routes)/vehiculo/components/vehicleModel/VehicleBrand.module.css
@@ -1,21 +1,7 @@
 .container {
-  font-size: var(--h1-size-mobile);
-  font-weight: 900;
   text-shadow: 0 0 2px #fff;
-  grid-column: 1/5;
-  grid-row: 2;
-  align-self: center;
-  padding: 16px;
-
-  @media (min-width: 768px) {
-    color: #fff;
-    font-size: var(--h1-size);
-    text-shadow: 0 0 10px #000;
-    align-self: start;
-    padding: 0;
-  }
+  font-size: var(--font-size-h1);
+  font-weight: 700;
+  line-height: 28px;
 }
-
-.brandHidden {
-  display: none;
-}
+ 
