--- a/components/header/Header.module.css
+++ b/components/header/Header.module.css
@@ -1,9 +1,9 @@
 .container {
   position: sticky;
   top: 0;
-  z-index: 20;
+  z-index: 40;
   width: 100dvw;
-  height: 60px;
+  height: 50px;
   backdrop-filter: blur(10px);
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.2);
   padding: 0 16px;
@@ -22,7 +22,7 @@
 }
 
 .logo_mobile img{
-  width: 60px;
+  width: 50px;
 }
 
 .menu_desktop {
@@ -33,6 +33,10 @@
   @media (max-width: 768px) {
     display: none;
   }
+}
+
+.logo_desktop{
+  width: 170px;
 }
 
 .links ul {
