--- a/app/(routes)/vehiculo/components/vehiclePart/VehiclePart.module.css
+++ b/app/(routes)/vehiculo/components/vehiclePart/VehiclePart.module.css
@@ -1,5 +1,6 @@
 .header {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   gap: 16px;
   margin-bottom: 24px;
@@ -7,7 +8,7 @@
 
 .content {
   padding: 16px;
-  background: rgba(255, 255, 255, 0.05);
+  background: var(--background-card);
   border-radius: 8px;
   transition: transform 0.3s ease;
 }
