--- a/app/(routes)/vehiculo/components/companies/CompanyLogo.module.css
+++ b/app/(routes)/vehiculo/components/companies/CompanyLogo.module.css
@@ -1,14 +1,9 @@
 .container {
-  width: 150px;
-  
-  @media (min-width: 426px) {
-    width: 200px;
-  }
+  position: relative;
+  width: 100px;
+  height: 100px;
 }
 
 .container img {
-  pointer-events: none;
-  touch-action: none;
-  width: 150px;
-  height: auto;
+  object-fit: contain;
 }
