--- a/app/components/header/Header.module.css
+++ b/app/components/header/Header.module.css
@@ -4,7 +4,7 @@
   z-index: 40;
   width: 100dvw;
   height: 50px;
-  backdrop-filter: blur(10px);
+  background: rgba(0, 0, 0, 0.8);
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.2);
   padding: 0 16px;
 }
@@ -12,7 +12,7 @@
 .menu_mobile {
   width: 100%;
   height: 100%;
-  display:flex;
+  display: flex;
   justify-content: space-between;
   align-items: center;
 
@@ -21,7 +21,7 @@
   }
 }
 
-.logo_mobile img{
+.logo_mobile img {
   width: 50px;
 }
 
@@ -35,8 +35,8 @@
   }
 }
 
-.logo_desktop{
-  width: 160px;
+.logo_desktop {
+  width: 150px;
 }
 
 .links ul {
@@ -44,5 +44,3 @@
   gap: 16px;
   align-items: center;
 }
-
-
