--- a/app/(routes)/posts/[slug]/componentes/author/Author.module.css
+++ b/app/(routes)/posts/[slug]/componentes/author/Author.module.css
@@ -2,6 +2,10 @@
   margin: 16px;
   display: flex;
   align-items: center;
+
+  @media (min-width: 768px) {
+    margin: 16px 0;
+  }
 }
 
 .avatar {
@@ -13,6 +17,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  @media (min-width: 768px) {
+    width: 48px;
+    height: 48px;
+    margin-right: 12px;
+  }
 }
 
 .info {
@@ -20,9 +30,17 @@
   flex-direction: column;
   font-size: 12px;
   color: #666;
+
+  @media (min-width: 768px) {
+    font-size: 14px;
+  }
 }
 .name {
   font-weight: 500;
   font-size: 13px;
   color: #000;
+
+  @media (min-width: 768px) {
+    font-size: 15px;
+  }
 }
