--- a/app/main/components/magazine/Magazine.module.css
+++ b/app/main/components/magazine/Magazine.module.css
@@ -14,7 +14,7 @@
 
 .bento {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr;
   gap: 8px;
 
   @media (min-width: 426px) {
@@ -29,7 +29,7 @@
 }
 
 .bento_principal {
-  grid-column: 1/3;
+  grid-column: 1;
   background-color: #000;
   border-radius: 10px;
   width: 100%;
