--- a/app/main/components/magazine/components/bento_item/BentoItem.module.css
+++ b/app/main/components/magazine/components/bento_item/BentoItem.module.css
@@ -1,15 +1,44 @@
 .container {
   width: 100%;
-  height: 280px;
   border-radius: 10px;
   overflow: hidden;
   background: var(--background-card);
   display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
 
   @media (min-width: 425px) {
+    display: block;
     height: 304px;
+  }
+}
+
+.image {
+  grid-column: 1;
+  clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
+
+  @media (min-width: 425px) {
+    clip-path: none;
+    grid-area: 1/1/2/1;
+    width: 100%;
+    height: 120px;
+  }
+}
+
+.image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.content {
+  grid-column: 2/4;
+  padding: 8px;
+
+  @media (min-width: 426px) {
+    grid-area: 2/1/4/1;
+    padding: 8px;
+    font-size: 20px;
+    line-height: 26px;
   }
 }
 
@@ -29,28 +58,6 @@
 .content_header span {
   font-size: 12px;
   font-weight: normal;
-}
-
-.image {
-  grid-area: 1/1/2/1;
-  width: 100%;
-  height: 120px;
-}
-
-.image img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.content {
-  grid-area: 2/1/4/1;
-  padding: 8px;
-
-  @media (min-width: 426px) {
-    font-size: 20px;
-    line-height: 26px;
-  }
 }
 
 .content_body h2 {
