--- a/app/main/components/magazine/Magazine.module.css
+++ b/app/main/components/magazine/Magazine.module.css
@@ -36,7 +36,7 @@
   height: 504px;
 
   @media (min-width: 426px) {
-    height: auto;
+    height: 504px;
     grid-column: 1/4;
     grid-row: 1/3;
   }
