--- a/app/main/components/magazine/components/bento_item/BentoItem.module.css
+++ b/app/main/components/magazine/components/bento_item/BentoItem.module.css
@@ -8,8 +8,36 @@
 
   @media (min-width: 426px) {
     display: block;
-    height: 270px;
+    height: 248px;
   }
+}
+
+.category {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  padding: 4px;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
+  position: absolute;
+  top: 80px;
+  left: 0;
+  z-index: 1;
+
+  @media (min-width: 425px) {
+    border-radius: 10px;
+    top: 8px;
+    left: 8px;
+  }
+}
+
+.category svg {
+  width: 15px;
+  height: 15px;
+}
+
+.category span {
+  font-size: 12px;
+  font-weight: normal;
 }
 
 .image {
@@ -39,37 +67,7 @@
   @media (min-width: 426px) {
     grid-area: 2/1/4/1;
     padding: 8px;
-    font-size: 20px;
-    line-height: 26px;
   }
-}
-
-.content_header {
-  display: flex;
-  align-items: center;
-  gap: 4px;
-  padding: 4px;
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
-  position: absolute;
-  top: 80px;
-  left: 0;
-  z-index: 1;
-
-  @media (min-width: 425px) {
-    border-radius: 10px;
-    top: 8px;
-    left: 8px;
-  }
-}
-
-.content_header svg {
-  width: 15px;
-  height: 15px;
-}
-
-.content_header span {
-  font-size: 12px;
-  font-weight: normal;
 }
 
 .content_body h2 {
@@ -79,7 +77,7 @@
   margin-bottom: 4px;
 
   @media (min-width: 1500px) {
-    font-size: 20px;
+    font-size: 18px;
     line-height: 26px;
   }
 }
