--- a/app/(routes)/search/Search.module.css
+++ b/app/(routes)/search/Search.module.css
@@ -1,29 +1,49 @@
-.searchPage {
-    min-height: calc(100dvh - 195px);
-    padding: 16px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.search_page_container {
+  min-height: calc(100dvh - 195px);
+  padding: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.searchEmpty {
+.search_page_head {
   text-align: center;
   max-width: 720px;
   width: 100%;
   margin: 0 auto;
   padding: 32px 16px;
-  color: #e5e7eb; 
+  color: #e5e7eb;
 }
 
-.searchEmpty h1 {
-  font-size: 1.875rem; 
+.search_page_head h1 {
+  font-size: 1.875rem;
   line-height: 2.25rem;
   font-weight: 700;
   margin-bottom: 8px;
 }
 
-.searchEmpty p {
-  color: #9ca3af; 
+.search_page_head p {
+  color: #9ca3af;
+}
+
+/* ////// */
+
+.search_result_header {
+  text-align: center;
+  max-width: 720px;
+  width: 100%;
+  padding: 32px 16px;
+}
+
+.search_result_header h1 {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+  font-weight: 700;
+  margin-bottom: 8px;
+}
+
+.search_query {
+  color: #d1b000;
 }
 
 /* .searchHeader {
