--- a/app/components/header/Header.module.css
+++ b/app/components/header/Header.module.css
@@ -4,27 +4,7 @@
   z-index: 40;
   width: 100dvw;
   height: 50px;
-  background: rgba(0, 0, 0, 0.8);
+  background: #000;
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.2);
   padding: 0 16px;
-}
-
-.menu_desktop {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  @media (max-width: 768px) {
-    display: none;
-  }
-}
-
-.logo_desktop {
-  width: 150px;
-}
-
-.links ul {
-  display: flex;
-  gap: 16px;
-  align-items: center;
 }
