--- a/app/components/header/Header.module.css
+++ b/app/components/header/Header.module.css
@@ -2,7 +2,7 @@
   position: sticky;
   top: 0;
   z-index: 40;
-  width: 100dvw;
+  width: 100%;
   height: 50px;
   background: #000;
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.2);
