--- a/app/main/components/gallery/components/lastPhotos/LastPhotos.module.css
+++ b/app/main/components/gallery/components/lastPhotos/LastPhotos.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 0 4px;
+  margin: 16px 4px;
 }
 
 .container h3 {
