--- a/app/main/components/magazine/Magazine.module.css
+++ b/app/main/components/magazine/Magazine.module.css
@@ -1,15 +1,5 @@
 .container {
-  max-width: 1622px;
-  padding: 0 8px;
-
-  @media (min-width: 1200px) {
-    max-width: 1200px;
-    margin: 0 auto;
-  }
-  @media (min-width: 1500px) {
-    max-width: 1600px;
-    margin: 0 auto;
-  }
+  width: 100%;  
 }
 
 .bento {
@@ -17,15 +7,23 @@
   grid-template-columns: 1fr;
   gap: 8px;
 
-  @media (min-width: 426px) {
-    grid-template-columns: repeat(3, 1fr);
+  @media (min-width: 431px) {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(1, 1fr);
   }
+
   @media (min-width: 769px) {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  } 
+  @media (min-width: 1025px) {
     grid-template-columns: repeat(5, 1fr);
-  }
-  @media (min-width: 1500px) {
+    grid-template-rows: repeat(2, 1fr);
+  } 
+  @media (min-width: 1440px) {
     grid-template-columns: repeat(6, 1fr);
-  }
+    grid-template-rows: repeat(2, 1fr);
+  }  
 }
 
 .bento_principal {
@@ -35,14 +33,21 @@
   width: 100%;
   height: 504px;
 
-  @media (min-width: 426px) {
+  @media (min-width: 431px) {
+    height: 504px;
+    grid-column: 1/3;
+    grid-row: 1;
+  }
+
+  @media (min-width: 769px) {
     height: 504px;
     grid-column: 1/4;
     grid-row: 1/3;
   }
 
-  @media (min-width: 769px) {
+  @media (min-width: 1025px) {
     grid-column: 1/4;
+    grid-row: 1/3;
   }
 }
 
@@ -50,33 +55,34 @@
   display: block;
 }
 
-.bento > article:nth-of-type(n + 6) {
+.bento > article:nth-of-type(n + 5) {
   display: none;
 }
 
-@media (min-width: 426px) {
+@media (min-width: 431px) {
+  .bento > article:nth-of-type(-n + 6) {
+    display: block;
+  }
+  .bento > article:nth-of-type(n + 7) {
+    display: none;
+  }
+}
+
+@media (min-width: 769px) {
+  .bento > article:nth-of-type(n + 5) {
+    display: none;
+  }
+}
+
+@media (min-width: 1024px) {
+  .bento > article:nth-of-type(-n + 5) {
+    display: block;
+  }
+}
+
+@media (min-width: 1440px) {
   .bento > article:nth-of-type(-n + 7) {
     display: block;
   }
-  .bento > article:nth-of-type(n + 8) {
-    display: none;
-  }
 }
 
-@media (min-width: 1025px) {
-  .bento > article:nth-of-type(-n + 8) {
-    display: block;
-  }
-  .bento > article:nth-of-type(n + 9) {
-    display: none;
-  }
-}
-
-@media (min-width: 1500px) {
-  .bento > article:nth-of-type(-n + 10) {
-    display: block;
-  }
-  .bento > article:nth-of-type(n + 11) {
-    display: none;
-  }
-}
