--- a/app/components/header/Header.module.css
+++ b/app/components/header/Header.module.css
@@ -1,6 +1,7 @@
 .container {
   position: sticky;
   z-index: 40;
+  top: 0;
   background: #000;
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.2);
   padding: 4px 16px;
