--- a/app/main/Main.module.css
+++ b/app/main/Main.module.css
@@ -4,7 +4,7 @@
 }
 
 .content {
-  padding: 4px;
+  margin: 4px;
   grid-column: span 12;
 
   @media (min-width: 1025px) {
@@ -14,6 +14,7 @@
 
 .banner { 
   display: none;
+  margin: 4px;
 
   @media (min-width: 1025px) {
     grid-column: span 1;
