--- a/app/components/image-card/ImageCard.module.css
+++ b/app/components/image-card/ImageCard.module.css
@@ -8,12 +8,21 @@
   border-radius: 8px;
   overflow: hidden;
   aspect-ratio: 16/9;
+  position: relative;
 }
 
 .image img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .content {
