--- a/app/(routes)/search/components/search-result/SearchResult.module.css
+++ b/app/(routes)/search/components/search-result/SearchResult.module.css
@@ -56,6 +56,14 @@
   transform: scale(1.03);
 }
 
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .caption {
   display: flex;
   flex-direction: column;
@@ -78,8 +86,8 @@
 }
 
 .loader {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 16px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 16px 0;
 }
