--- a/app/(routes)/modelo/[id]/[slug]/Modelo.module.css
+++ b/app/(routes)/modelo/[id]/[slug]/Modelo.module.css
@@ -53,3 +53,12 @@
 .image:hover .img {
   transform: scale(1.03);
 }
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
