--- a/app/components/abc-loader/ABCLoader.module.css
+++ b/app/components/abc-loader/ABCLoader.module.css
@@ -1,5 +1,6 @@
 .container {
-  width: 100%;
+  width: 100dvw;
+  height: 100dvh;
   display: flex;
   align-items: center;
   animation: appear-disappear 3s ease-in-out infinite;
